# genetic-algs

./: .gitignore  README.md  meson.build  pyproject.toml
ga_core/: generic.py  meson.build  score.py  types.py
ga_core/include/: meson.build
ga_core/include/operations/: list_utils.h
ga_core/operations/: __init__.py  _list_utils.c  _sorting.c  operations.c  sorting.py
ga_core/operations/include/: list_utils.h  sorting.h
genalgs/: generic.py  meson.build  score.py  types.py
genalgs/_build_utils/: imports.py  version.py
genalgs/include/: meson.build
genalgs/include/instance/: object.h
genalgs/include/operations/: sorting.h
genalgs/instance/: __init__.py  instance.c  object.c  object.py  object.pyi
genalgs/operations/: __init__.py  _list_utils.c  operations.c  sorting.c  sorting.py  sorting.pyi
